--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "tsnd --respawn -T --clear --rs src/index.ts",
-		"type:check": "tsc",
-		"test:server": "cross-env NODE_ENV=test yarn dev",
 		"test": "jest",
 		"commit": "git add . && git commit -m",
 		"origin": "git push origin master",
@@ -33,12 +31,13 @@
 		"@types/jest": "^26.0.20",
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.14.25",
+		"@types/supertest": "^2.0.10",
 		"@types/uuid": "^8.3.0",
 		"@types/validator": "^13.1.3",
 		"better-sqlite3": "^7.1.2",
-		"cross-env": "^7.0.3",
 		"jest": "^26.6.3",
 		"rimraf": "^3.0.2",
+		"supertest": "^6.1.3",
 		"ts-jest": "^26.5.0",
 		"ts-node": "9.1.1",
 		"ts-node-dev": "^1.1.1",
